--- a/mod.config
+++ b/mod.config
@@ -6,7 +6,7 @@
 
 # The id of the mod packaged by this project.
 # This must exist as a directory in the mods directory and should not contain spaces.
-MOD_ID="example"
+MOD_ID="fuel"
 
 # The OpenRA engine version to use for this project.
 ENGINE_VERSION="playtest-20180729"
@@ -36,7 +36,7 @@ TRAVIS_TEST_PACKAGING="False"
 #  - Windows installers will be named as {PACKAGING_INSTALLER_NAME}-{TAG}.exe
 #  - macOS installers will be named as {PACKAGING_INSTALLER_NAME}-{TAG}.zip
 #  - Linux .appimages will be named as {PACKAGING_INSTALLER_NAME}-${TAG}.AppImage
-PACKAGING_INSTALLER_NAME="ExampleMod"
+PACKAGING_INSTALLER_NAME="OpenRA-Fuel"
 
 # The human-readable name for this project.
 # This is used in:
@@ -49,7 +49,7 @@ PACKAGING_INSTALLER_NAME="ExampleMod"
 #  - Windows desktop shortcut
 #  - Windows "Programs and Features" list
 #  - Linux launcher shortcut
-PACKAGING_DISPLAY_NAME="Example Mod"
+PACKAGING_DISPLAY_NAME="OpenRA Fuel Plugin"
 
 # The URL for the project homepage.
 # This is used in:
@@ -99,7 +99,7 @@ PACKAGING_OVERWRITE_MOD_VERSION="True"
 
 # Automatic engine managment will treat the OpenRA engine files like a read-only dependency.
 # Disable this if you would like to modify or manager your own engine files.
-AUTOMATIC_ENGINE_MANAGEMENT="True"
+AUTOMATIC_ENGINE_MANAGEMENT="False"
 
 # The URL to download the engine files from when AUTOMATIC_ENGINE_MANAGEMENT is enabled.
 AUTOMATIC_ENGINE_SOURCE="https://github.com/OpenRA/OpenRA/archive/${ENGINE_VERSION}.zip"
